[tool.poetry]
name = "fastapi-dnda1"
version = "0.1.0"
description = "aqui aprendiendo fastapi con poetry"
authors = ["Your Name <you@example.com>"]
license = "no license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
